Refactor category command handlers to implement a generic CommandHandler interface, update command classes to records for improved immutability, and enhance CategoryController to utilize new command and query handlers for better structure and response handling.