@@ -1,7 +1,6 @@
 package com.TurkcellTakim7.category_service.application.mappers;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
@@ -12,9 +11,6 @@ import com.TurkcellTakim7.category_service.domain.entities.Category;
 public class CategoryResponseMapper {
 
     public CategoryResponse toResponse(Category category) {
-        if (category == null) {
-            return null;
-        }
         return new CategoryResponse(
                 category.getId(),
                 category.getName(),
@@ -26,6 +22,6 @@ public class CategoryResponseMapper {
     public List<CategoryResponse> toResponseList(List<Category> categories) {
         return categories.stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
